--- a/estilo.css
+++ b/estilo.css
@@ -10,17 +10,19 @@ p {
 #Nome {
     font-size: 17px;
     font-family: monospace;
+    border-radius: 5px;
     border-bottom: 1px solid #f1c40f;
 }
 
 #DivGG {
+    border-radius: 8px;
     width: 595px;
     height: 842px;
     margin-top: 40px;
     margin-right: auto;
     margin-left: auto;
     background-color: white;
-    border: 2px solid #f1c40f;
+    box-shadow: 0px 0px 15px black inset;
 }
 
 #ParteDireita {
@@ -40,11 +42,8 @@ p {
     height: 250px;
 }
 
-#Contatos {
-    padding: 20px;
-}
-
 #Objetivo {
+    border-radius: 10px;
     height: 166px;
     background-color: #f1c40f;
     padding-bottom: 20%;
@@ -59,6 +58,7 @@ p {
 }
 
 #Experiencia {
+    border-radius: 10px;
     height: 436px;
     margin-left: 5px;
     margin-bottom: 5px;
@@ -66,6 +66,7 @@ p {
 }
 
 #Referências {
+    border-radius: 10px;
     height: 220px;
     margin-right: 5px;
     margin-bottom: 5px;
@@ -77,34 +78,7 @@ p {
     text-align: center;
 }
 
-
-/*Animações*/
-
-#Nome:hover {
-    transition: 2s;
-    box-shadow: 0 0 10px black inset;
-    background-color: #f1c40f;
-    transform: scale(1.2);
-}
-
-#Experiencia:hover {
-    transition: 2s;
-    box-shadow: 0 0 10px black inset;
-    background-color: #f1c40f;
-    transform: scale(1.3);
-}
-
-#Objetivo:hover {
-    transition: 2s;
-    filter: invert(100%);
-    box-shadow: 0 0 10px black inset;
-    background-color: white;
-    transform: scale(1.3);
-}
-
-#Referências:hover {
-    transition: 2s;
-    box-shadow: 0 0 10px black inset;
-    background-color: #f1c40f;
-    transform: scale(1.3);
+a {
+    text-decoration: none;
+    cursor: pointer;
 }
